--- a/css/website2.css
+++ b/css/website2.css
@@ -213,6 +213,10 @@ h4 {
   margin: 0;
   text-transform: uppercase;
 }
+h5 {
+  font-size: 12px;
+  margin: 2px;
+}
 pre.prettyprint {
   margin: 8px 0 30px 0;
 }
@@ -695,4 +699,11 @@ code.keyword {
 code.plain {
   color: #d94d3a;
   text-decoration-color: #d94d3a;
+}
+
+/*---------------------------------------------------------diy------------------------------------*/
+.tactic_block {
+  display: inline-block;
+  margin-right: 5px;
+  width: 200px;
 }
