--- a/css/website2.css
+++ b/css/website2.css
@@ -702,8 +702,38 @@ code.plain {
 }
 
 /*---------------------------------------------------------diy------------------------------------*/
-.tactic_block {
+.flip-card:hover .tactic_block {
+	opacity: 0.1;
+}
+
+.flip-card {
+  background-color: transparent;
   display: inline-block;
-  margin-right: 5px;
+  margin: 10px;
   width: 200px;
 }
+
+.flip-card-inner {
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-back {
+  background-color: #000000;
+  color: white;
+  transform: rotateY(180deg);
+}
+
