--- a/css/website2.css
+++ b/css/website2.css
@@ -702,15 +702,20 @@ code.plain {
 }
 
 /*---------------------------------------------------------diy------------------------------------*/
+.tactic_block {
+  display: inline-block;
+  margin: 10px;
+  width: 200px;
+}
 .flip-card:hover .tactic_block {
 	opacity: 0.1;
 }
 
 .flip-card {
-  background-color: transparent;
   display: inline-block;
-  margin: 10px;
+  margin: 20px 10px 20px;
   width: 200px;
+  height: 220px;
 }
 
 .flip-card-inner {
@@ -733,7 +738,7 @@ code.plain {
 
 .flip-card-back {
   background-color: #000000;
-  color: white;
+  color: #000000;
   transform: rotateY(180deg);
 }
 
