--- a/css/website2.css
+++ b/css/website2.css
@@ -2,7 +2,7 @@
  * Normalize
  *----------------------------------------------------------------------------*/
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
-button, hr, input {
+hr, input {
   overflow: visible
 }
 audio, canvas, progress, video {
@@ -435,10 +435,10 @@ main {
   text-transform: none;
 }
 .example-nav-0e953 h4.active {
-  background: #4d4d4d;
-  border-top: 1px solid #1a1a1a;
-  border-right: 1px solid #1a1a1a;
-  border-left: 4px solid #1a1a1a;
+  background: #9C373A;
+  border-top: 1px solid #6C373A;
+  border-right: 1px solid #6C373A;
+  border-left: 1px solid #6C373A;
   color: #fff;
   font-weight: bold;
 }
@@ -701,14 +701,15 @@ code.plain {
   width: 200px;
 }
 .flip-card:hover .tactic_block {
-	opacity: 0.1;
+	display: none;
+	/*opacity: 0.1;*/
 }
 
 .flip-card {
   display: inline-block;
   margin: 20px 10px 20px;
   width: 200px;
-  height: 220px;
+  height: 240px;
 }
 
 .flip-card-inner {
@@ -739,11 +740,17 @@ code.plain {
 p.tactic-answer {
 	font-family:"Times New Roman";
 	font-size: 14px;
+	border-style: groove;
 }
 
 div.scrollable {
 	width: inherit;
 	margin: 10px 4px 10px;
-	height: 160px;
+	height: 140px;
     overflow: auto;
+}
+
+div.copy-notification {
+	font-family: "serif";
+	font-size:8px;
 }
