--- a/css/website2.css
+++ b/css/website2.css
@@ -145,9 +145,9 @@ html {
     box-sizing: inherit;
 }
 body {
-    /*background: #333;
-    color: #333;*/
-	background-color: transparent;
+    background: #333;
+    color: #333;
+	/*background-color: transparent;*/
     font-family: 'Open Sans', arial, sans-serif;
 }
 body.homepage {
@@ -705,7 +705,7 @@ code.plain {
 }
 .flip-card {
     display: inline-block;
-    margin: 20px 10px 20px;
+    margin: 15px 10px 10px;
     width: 200px;
     height: 240px;
 }
@@ -758,3 +758,16 @@ div.copy-notification {
 
 
 /*---------------------------donation------------------------------------*/
+
+.donation_block {
+	padding-top: 20px;
+}
+
+.donation_block .dollar-sign {
+	margin-top:30px;
+}
+
+
+.donation_block h2, .donation_block p{
+	color:#F1F1F1;
+}
