--- a/css/website2.css
+++ b/css/website2.css
@@ -317,7 +317,7 @@ footer {
     background: #713134;
     color: #713134;
     font-size: 14px;
-    padding: 30px 0;
+    padding: 30px 0px 5px;
 }
 footer p {
     margin: 0 0 8px 0;
