--- a/css/website2.css
+++ b/css/website2.css
@@ -705,7 +705,9 @@ footer p{
     width: 200px;
 }
 .flip-card:hover .tactic_block {
-    display: none;
+    opacity: 0;
+	transition: opacity 1s;
+	display:none;
     /*opacity: 0.1;*/
 }
 .flip-card {
