--- a/css/website2.css
+++ b/css/website2.css
@@ -379,3 +379,21 @@ a.bg-page {
 }
 
 /*---------------------------menu-------------------------------*/
+div.dropdown button img{
+	height: 20px;
+	width: 20px;
+}
+
+div.dropdown {
+	margin-top: 8px;
+	padding-left: 5px;
+}
+
+div.dropdown button.dropdown-item img{
+	height: 20px;
+	width: 20px;
+}
+
+.dropdown-menu {
+    min-width: 0px !important;
+}
